--- a/app/src/main/res/layout/appearance_settings_fragment.xml
+++ b/app/src/main/res/layout/appearance_settings_fragment.xml
@@ -40,9 +40,9 @@
                     android:id="@+id/imageButton_color_option_end_icon"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:scaleType="fitCenter"
-                    android:tint="@color/colorSecondaryDark"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:tint="?attr/attrTintColorSecondaryDark"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -103,9 +103,9 @@
                     android:id="@+id/imageButton_user_display_option_end_icon"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:scaleType="fitCenter"
-                    android:tint="@color/colorSecondaryDark"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:tint="?attr/attrTintColorSecondaryDark"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -167,8 +167,8 @@
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
+                    android:tint="?attr/attrTintColorSecondaryDark"
                     android:scaleType="fitCenter"
-                    android:tint="@color/colorSecondaryDark"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -229,8 +229,8 @@
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
+                    android:tint="?attr/attrTintColorSecondaryDark"
                     android:scaleType="fitCenter"
-                    android:tint="@color/colorSecondaryDark"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
