--- a/app/src/main/res/layout/contact_profile_fragment.xml
+++ b/app/src/main/res/layout/contact_profile_fragment.xml
@@ -72,11 +72,12 @@
 
                 <TextView
                     android:id="@+id/textView_information"
+                    style="@style/SmallBodyTextView"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:background="?attr/attrBackgroundSectionColor"
                     android:inputType="textCapCharacters"
-                    android:padding="@dimen/normal_padding"
+                    android:padding="@dimen/small_padding"
                     android:text="@string/text_information"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +104,8 @@
                         android:id="@+id/imageButton_change_name_end_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         android:padding="@dimen/x_small_padding"
                         android:scaleType="center"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -159,7 +161,8 @@
                         android:id="@+id/imageButton_change_nickname_end_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         android:padding="@dimen/x_small_padding"
                         android:scaleType="center"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -196,10 +199,11 @@
 
                 <TextView
                     android:id="@+id/textView_general"
+                    style="@style/SmallBodyTextView"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:background="?attr/attrBackgroundSectionColor"
-                    android:padding="@dimen/normal_padding"
+                    android:padding="@dimen/small_padding"
                     android:text="@string/text_general"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
