--- a/app/src/main/res/layout/enter_pin_fragment.xml
+++ b/app/src/main/res/layout/enter_pin_fragment.xml
@@ -61,6 +61,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/large_margin"
+                android:tint="?attr/attrColorButtonTint"
                 app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
                 app:layout_constraintEnd_toEndOf="@id/guideline_end"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -102,7 +103,7 @@
                 android:layout_height="62dp"
                 android:layout_margin="@dimen/normal_margin"
                 android:background="@android:color/transparent"
-                android:tint="@color/buttonTint"
+                android:tint="?attr/attrColorButtonTint"
                 android:scaleType="fitCenter"
                 app:layout_constraintStart_toStartOf="@id/guideline_start"
                 app:layout_constraintTop_toTopOf="@id/guideline_top"
