--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -175,7 +175,8 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:scaleType="fitCenter"
-                        app:tint="@color/colorSecondaryDark"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -252,7 +253,8 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:scaleType="fitCenter"
-                        app:tint="@color/colorSecondaryDark"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -327,7 +329,8 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:scaleType="fitCenter"
-                        app:tint="@color/colorSecondaryDark"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
