--- a/app/src/main/res/layout/security_settings_fragment.xml
+++ b/app/src/main/res/layout/security_settings_fragment.xml
@@ -27,7 +27,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="?attr/attrBackgroundSectionColor"
-                android:padding="@dimen/normal_padding"
+                android:padding="@dimen/small_padding"
                 android:text="CONVERSACIÓN!!"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -180,7 +180,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="?attr/attrBackgroundSectionColor"
-                android:padding="@dimen/normal_padding"
+                android:padding="@dimen/small_padding"
                 android:text="@string/text_security"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -315,8 +315,8 @@
                 style="@style/SmallBodyTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@color/sectionColor"
-                android:padding="10dp"
+                android:background="?attr/attrBackgroundSectionColor"
+                android:padding="@dimen/small_padding"
                 android:text="@string/text_general"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
