--- a/app/src/main/res/drawable/bg_enter_code_filled.xml
+++ b/app/src/main/res/drawable/bg_enter_code_filled.xml
@@ -11,7 +11,7 @@
         android:height="4dp"
         android:gravity="bottom">
         <shape android:shape="rectangle">
-            <solid android:color="@color/buttonTint" />
+            <solid android:color="?attr/attrColorButtonTint" />
             <corners
                 android:bottomLeftRadius="4dp"
                 android:bottomRightRadius="4dp" />
