--- a/app/src/main/res/drawable/bg_spinner.xml
+++ b/app/src/main/res/drawable/bg_spinner.xml
@@ -6,8 +6,8 @@
             <item>
                 <shape>
                     <stroke
-                        android:width="1dp"
-                        android:color="@color/colorSecondary"/>
+                        android:width="2dp"
+                        android:color="?attr/attrBackgroundSectionColor"/>
 
                     <corners android:bottomRightRadius="4dp"
                         android:bottomLeftRadius="4dp"
@@ -20,7 +20,7 @@
 
             <item android:drawable="@drawable/ic_arrow_down_black" android:gravity="center_vertical|right" android:right="5dp">
 
-                <bitmap android:src="@drawable/ic_arrow_down_black" android:tint="@color/colorSecondaryDark"/>
+                <bitmap android:src="@drawable/ic_arrow_down_black" android:tint="?attr/attrTintColorSecondaryDark"/>
             </item>
 
         </layer-list>
