--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -11,6 +11,7 @@
         android:id="@+id/constrainsLayout_parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/attrBackgroundColorBackground"
         tools:context=".ui.about.AboutFragment">
 
         <ImageView
