--- a/app/src/main/res/layout/add_contact_badge.xml
+++ b/app/src/main/res/layout/add_contact_badge.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="?attr/actionButtonStyle"
     android:layout_width="wrap_content"
@@ -12,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/ic_person_add_white" />
+        android:src="@drawable/ic_person_add_white"
+        app:tint="?attr/attrBackgroundTintIconToolbar" />
 
     <TextView
         android:id="@+id/textView_badge"
