--- a/app/src/main/res/layout/color_scheme_fragment.xml
+++ b/app/src/main/res/layout/color_scheme_fragment.xml
@@ -53,11 +53,12 @@
 
                 <TextView
                     android:id="@+id/text_section_system_themes"
+                    style="@style/SmallBodyTextView"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:background="?attr/attrBackgroundSectionColor"
                     android:inputType="textCapCharacters"
-                    android:padding="@dimen/normal_padding"
+                    android:padding="@dimen/small_padding"
                     android:text="@string/text_section_system_themes"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -85,11 +86,12 @@
 
                     <TextView
                         android:id="@+id/text_section_dark_themes"
+                        style="@style/SmallBodyTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/attrBackgroundSectionColor"
                         android:inputType="textCapCharacters"
-                        android:padding="@dimen/normal_padding"
+                        android:padding="@dimen/small_padding"
                         android:text="@string/text_section_dark_themes"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -113,11 +115,12 @@
 
                     <TextView
                         android:id="@+id/text_section_light_themes"
+                        style="@style/SmallBodyTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/attrBackgroundSectionColor"
                         android:inputType="textCapCharacters"
-                        android:padding="@dimen/normal_padding"
+                        android:padding="@dimen/small_padding"
                         android:text="@string/text_section_light_themes"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
