--- a/app/src/main/res/layout/self_destruct_time_dialog_fragment.xml
+++ b/app/src/main/res/layout/self_destruct_time_dialog_fragment.xml
@@ -13,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/attrBackgroundColorBackgroundDialog"
         tools:context=".ui.selfDestructTime.SelfDestructTimeDialogFragment">
 
         <TextView
