--- a/app/src/main/res/layout/status_fragment.xml
+++ b/app/src/main/res/layout/status_fragment.xml
@@ -53,6 +53,7 @@
                     android:lines="1"
                     android:maxLength="@dimen/max_length_status"
                     android:singleLine="true"
+                    android:textColor="?attr/attrTextColorHint"
                     android:text="@{viewModel.user.status}" />
             </com.google.android.material.textfield.TextInputLayout>
 
