--- a/app/src/main/res/layout/user_display_format_dialog_fragment.xml
+++ b/app/src/main/res/layout/user_display_format_dialog_fragment.xml
@@ -10,6 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/attrBackgroundColorBackgroundDialog"
         tools:context=".ui.userDisplayFormat.UserDisplayFormatDialogFragment">
 
         <TextView
