--- a/app/src/main/res/menu/menu_selection_message.xml
+++ b/app/src/main/res/menu/menu_selection_message.xml
@@ -6,11 +6,13 @@
         android:id="@+id/delete"
         android:icon="@drawable/ic_delete_black"
         android:title="@string/text_search"
+        app:iconTint="?attr/attrBackgroundTintIconToolbar"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/copy"
         android:icon="@drawable/ic_content_copy_black"
         android:title="@string/text_add_contact"
-        app:showAsAction="always" />
+        app:iconTint="?attr/attrBackgroundTintIconToolbar"
+        app:showAsAction="ifRoom" />
 </menu>
