--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,14 +35,16 @@
         <item name="attrBackgroundColorBackground">@color/colorBackground</item>
         <item name="attrTintColorSecondaryDark">@color/colorSecondaryDark</item>
         <item name="attrTextColorColorPrimary">@color/colorPrimary</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/colorError</item>
         <item name="attrErrorTextColorColorError">@color/colorError</item>
         <item name="attrErrorIconTintColorError">@color/colorError</item>
         <item name="attrColorButtonTint">@color/colorPrimaryDark</item>
         <item name="attrColorTrackColor">@color/trackColor</item>
         <item name="attrSeparatorColor">@color/separator</item>
-
+        <item name="attrSeekbarProgressTint">@color/colorSecondaryLight</item>
+        <item name="attrSeekbarThumbTint">@color/colorSecondary</item>
     </style>
 
     <style name="AppThemePinkDream" parent="AppTheme">
@@ -75,7 +77,8 @@
         <item name="attrBackgroundColorBackground">@color/colorBackgroundPinkDream</item>
         <item name="attrTintColorSecondaryDark">@color/colorSecondaryDarkPinkDream</item>
         <item name="attrTextColorColorPrimary">@color/colorPrimaryPinkDream</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/colorErrorPinkDream</item>
         <item name="attrErrorTextColorColorError">@color/colorErrorPinkDream</item>
         <item name="attrErrorIconTintColorError">@color/colorErrorPinkDream</item>
@@ -84,7 +87,8 @@
         <item name="android:itemBackground">@color/colorBackgroundPinkDream</item>
         <item name="android:panelFullBackground">@color/colorBackgroundPinkDream</item>
         <item name="attrSeparatorColor">@color/buttonTintPinkDream</item>
-
+        <item name="attrSeekbarProgressTint">@color/colorSecondaryLight</item>
+        <item name="attrSeekbarThumbTint">@color/colorSecondary</item>
     </style>
 
     <style name="AppThemeClearSky" parent="AppTheme">
@@ -117,7 +121,8 @@
         <item name="attrBackgroundColorBackground">@color/colorBackgroundClearSky</item>
         <item name="attrTintColorSecondaryDark">@color/colorSecondaryDarkClearSky</item>
         <item name="attrTextColorColorPrimary">@color/colorPrimaryClearSky</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/colorErrorClearSky</item>
         <item name="attrErrorTextColorColorError">@color/colorErrorClearSky</item>
         <item name="attrErrorIconTintColorError">@color/colorErrorClearSky</item>
@@ -126,7 +131,8 @@
         <item name="android:itemBackground">@color/colorBackgroundClearSky</item>
         <item name="android:panelFullBackground">@color/colorBackgroundClearSky</item>
         <item name="attrSeparatorColor">@color/buttonTintClearSky</item>
-
+        <item name="attrSeekbarProgressTint">@color/colorSecondaryLight</item>
+        <item name="attrSeekbarThumbTint">@color/colorSecondary</item>
     </style>
 
     <style name="AppThemePurpleBluebonnets" parent="AppTheme">
@@ -141,7 +147,8 @@
         <item name="attrTextColorPrimaryTextColor">@color/primaryTextColorPurpleBluebonnets</item>
         <item name="attrIconTintWhite">@color/whitePurpleBluebonnets</item>
         <item name="attrBackgroundTintColorSecondary">@color/colorSecondaryPurpleBluebonnets</item>
-        <item name="attrTextColorSecondaryTextColor">@color/secondaryTextColorPurpleBluebonnets</item>
+        <item name="attrTextColorSecondaryTextColor">@color/secondaryTextColorPurpleBluebonnets
+        </item>
         <item name="attrTextColorButtonTint">@color/buttonTintPurpleBluebonnets</item>
         <item name="attrStrokeColorButtonTint">@color/buttonTintPurpleBluebonnets</item>
         <item name="attrRippleColorRippleTint">@color/ripple_tint</item>
@@ -150,16 +157,22 @@
         <item name="attrRippleColorRed">@color/ripple_red</item>
         <item name="attrTextColorWhite">@color/whitePurpleBluebonnets</item>
         <item name="attrBackgroundSectionColor">@color/sectionColorPurpleBluebonnets</item>
-        <item name="attrTextColorColorTextMyMessage">@color/colorSecondaryLightPurpleBluebonnets</item>
-        <item name="attrTextColorColorTextIncomingMessage">@color/secondaryTextColorPurpleBluebonnets</item>
+        <item name="attrTextColorColorTextMyMessage">@color/colorSecondaryLightPurpleBluebonnets
+        </item>
+        <item name="attrTextColorColorTextIncomingMessage">
+            @color/secondaryTextColorPurpleBluebonnets
+        </item>
         <item name="attrTextColorLinkTextColor">@color/linkTextColorPurpleBluebonnets</item>
         <item name="attrTextColorColorError">@color/colorErrorPurpleBluebonnets</item>
-        <item name="attrHintTextColorSecondaryTextColor">@color/secondaryTextColorPurpleBluebonnets</item>
+        <item name="attrHintTextColorSecondaryTextColor">
+            @color/secondaryTextColorPurpleBluebonnets
+        </item>
         <item name="attrBackgroundTintButtonTint">@color/buttonTintPurpleBluebonnets</item>
         <item name="attrBackgroundColorBackground">@color/colorBackgroundPurpleBluebonnets</item>
         <item name="attrTintColorSecondaryDark">@color/colorSecondaryDarkPurpleBluebonnets</item>
         <item name="attrTextColorColorPrimary">@color/colorPrimaryPurpleBluebonnets</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/colorErrorPurpleBluebonnets</item>
         <item name="attrErrorTextColorColorError">@color/colorErrorPurpleBluebonnets</item>
         <item name="attrErrorIconTintColorError">@color/colorErrorPurpleBluebonnets</item>
@@ -168,7 +181,8 @@
         <item name="android:itemBackground">@color/colorBackgroundPurpleBluebonnets</item>
         <item name="android:panelFullBackground">@color/colorBackgroundPurpleBluebonnets</item>
         <item name="attrSeparatorColor">@color/buttonTintPurpleBluebonnets</item>
-
+        <item name="attrSeekbarProgressTint">@color/colorSecondaryLight</item>
+        <item name="attrSeekbarThumbTint">@color/colorSecondary</item>
     </style>
 
     <style name="AppThemeCamouflage" parent="AppTheme">
@@ -193,7 +207,8 @@
         <item name="attrTextColorWhite">@color/whiteCamouflage</item>
         <item name="attrBackgroundSectionColor">@color/sectionColorCamouflage</item>
         <item name="attrTextColorColorTextMyMessage">@color/colorSecondaryLightCamouflage</item>
-        <item name="attrTextColorColorTextIncomingMessage">@color/secondaryTextColorCamouflage</item>
+        <item name="attrTextColorColorTextIncomingMessage">@color/secondaryTextColorCamouflage
+        </item>
         <item name="attrTextColorLinkTextColor">@color/linkTextColorCamouflage</item>
         <item name="attrTextColorColorError">@color/colorErrorCamouflage</item>
         <item name="attrHintTextColorSecondaryTextColor">@color/secondaryTextColorCamouflage</item>
@@ -201,11 +216,14 @@
         <item name="attrBackgroundColorBackground">@color/colorBackgroundCamouflage</item>
         <item name="attrTintColorSecondaryDark">@color/colorSecondaryDarkCamouflage</item>
         <item name="attrTextColorColorPrimary">@color/colorPrimaryCamouflage</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/colorErrorCamouflage</item>
         <item name="attrErrorTextColorColorError">@color/colorErrorCamouflage</item>
         <item name="attrErrorIconTintColorError">@color/colorErrorCamouflage</item>
         <item name="attrColorButtonTint">@color/colorPrimaryDarkCamouflage</item>
+        <item name="attrSeekbarProgressTint">@color/colorSecondaryLight</item>
+        <item name="attrSeekbarThumbTint">@color/colorSecondary</item>
     </style>
 
     <style name="AppThemeBlackGoldAlloy" parent="AppTheme">
@@ -230,19 +248,25 @@
         <item name="attrTextColorWhite">@color/whiteBlackGoldAlloy</item>
         <item name="attrBackgroundSectionColor">@color/sectionColorBlackGoldAlloy</item>
         <item name="attrTextColorColorTextMyMessage">@color/colorTextMyMessageBlackGoldAlloy</item>
-        <item name="attrTextColorColorTextIncomingMessage">@color/colorTextIncomingMessageBlackGoldAlloy</item>
+        <item name="attrTextColorColorTextIncomingMessage">
+            @color/colorTextIncomingMessageBlackGoldAlloy
+        </item>
         <item name="attrTextColorLinkTextColor">@color/linkTextColorBlackGoldAlloy</item>
         <item name="attrTextColorColorError">@color/colorErrorBlackGoldAlloy</item>
-        <item name="attrHintTextColorSecondaryTextColor">@color/secondaryTextColorBlackGoldAlloy</item>
+        <item name="attrHintTextColorSecondaryTextColor">@color/secondaryTextColorBlackGoldAlloy
+        </item>
         <item name="attrBackgroundTintButtonTint">@color/buttonTintBlackGoldAlloy</item>
         <item name="attrBackgroundColorBackground">@color/colorBackgroundBlackGoldAlloy</item>
         <item name="attrTintColorSecondaryDark">@color/colorSecondaryDarkBlackGoldAlloy</item>
         <item name="attrTextColorColorPrimary">@color/colorPrimaryBlackGoldAlloy</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/colorErrorBlackGoldAlloy</item>
         <item name="attrErrorTextColorColorError">@color/colorErrorBlackGoldAlloy</item>
         <item name="attrErrorIconTintColorError">@color/colorErrorBlackGoldAlloy</item>
         <item name="attrColorButtonTint">@color/colorPrimaryDarkBlackGoldAlloy</item>
+        <item name="attrSeekbarProgressTint">@color/colorSecondaryLight</item>
+        <item name="attrSeekbarThumbTint">@color/colorSecondary</item>
     </style>
 
     <style name="AppThemeColdOcean" parent="AppTheme">
@@ -267,7 +291,9 @@
         <item name="attrTextColorWhite">@color/whiteColdOcean</item>
         <item name="attrBackgroundSectionColor">@color/sectionColorColdOcean</item>
         <item name="attrTextColorColorTextMyMessage">@color/colorTextMyMessageColdOcean</item>
-        <item name="attrTextColorColorTextIncomingMessage">@color/colorTextIncomingMessageColdOcean</item>
+        <item name="attrTextColorColorTextIncomingMessage">
+            @color/colorTextIncomingMessageColdOcean
+        </item>
         <item name="attrTextColorLinkTextColor">@color/linkTextColorColdOcean</item>
         <item name="attrTextColorColorError">@color/colorErrorColdOcean</item>
         <item name="attrHintTextColorSecondaryTextColor">@color/secondaryTextColorColdOcean</item>
@@ -275,11 +301,14 @@
         <item name="attrBackgroundColorBackground">@color/colorBackgroundColdOcean</item>
         <item name="attrTintColorSecondaryDark">@color/colorSecondaryDarkColdOcean</item>
         <item name="attrTextColorColorPrimary">@color/colorPrimaryColdOcean</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/colorErrorColdOcean</item>
         <item name="attrErrorTextColorColorError">@color/colorErrorColdOcean</item>
         <item name="attrErrorIconTintColorError">@color/colorErrorColdOcean</item>
         <item name="attrColorButtonTint">@color/colorPrimaryDarkColdOcean</item>
+        <item name="attrSeekbarProgressTint">@color/colorSecondaryLight</item>
+        <item name="attrSeekbarThumbTint">@color/colorSecondary</item>
     </style>
 
     <style name="AppPrimaryButton" parent="Widget.MaterialComponents.Button">
