--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -398,8 +398,8 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
         <action
-            android:id="@+id/action_conversationFragment_to_conversationCameraNewFragment"
-            app:destination="@id/conversationCameraNewFragment" />
+            android:id="@+id/action_conversationFragment_to_attachmentDocumentFragment"
+            app:destination="@id/attachmentDocumentFragment" />
     </fragment>
     <fragment
         android:id="@+id/recoveryAccountFragment"
@@ -483,6 +483,9 @@
         <argument
             android:name="contactId"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_conversationCameraFragment_to_attachmentPreviewFragment"
+            app:destination="@id/attachmentPreviewFragment" />
     </fragment>
     <fragment
         android:id="@+id/contactProfileFragment"
@@ -533,14 +536,14 @@
         android:label="AttachmentPreviewFragment"
         tools:layout="@layout/attachment_preview_fragment">
         <argument
-            android:name="contact"
-            app:argType="com.naposystems.pepito.entity.Contact" />
-        <argument
-            android:name="galleryItem"
-            app:argType="com.naposystems.pepito.model.attachment.gallery.GalleryItem" />
+            android:name="attachment"
+            app:argType="com.naposystems.pepito.entity.message.attachments.Attachment" />
         <action
             android:id="@+id/action_attachmentPreviewFragment_to_conversationFragment"
             app:destination="@id/conversationFragment" />
+        <argument
+            android:name="galleryItemId"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/previewMediaFragment"
@@ -552,17 +555,8 @@
             app:argType="com.naposystems.pepito.entity.message.MessageAndAttachment" />
     </fragment>
     <fragment
-        android:id="@+id/conversationCameraNewFragment"
-        android:name="com.naposystems.pepito.ui.conversationCamera.ConversationCameraNewFragment"
-        android:label="conversation_camera_new_fragment"
-        tools:layout="@layout/conversation_camera_new_fragment">
-
-        <argument
-            android:name="userId"
-            app:argType="integer" />
-        <argument
-            android:name="contactId"
-            app:argType="integer" />
-
-    </fragment>
+        android:id="@+id/attachmentDocumentFragment"
+        android:name="com.naposystems.pepito.ui.attachmentDocument.AttachmentDocumentFragment"
+        android:label="attachment_document_fragment"
+        tools:layout="@layout/attachment_document_fragment" />
 </navigation>
