--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -38,6 +38,7 @@
 
     <string name="text_send_to">Invia ad %1$s</string>
     <string name="text_error_playing_audio">Un errore si è verificato per l\'audio gioco</string>
+    <string name="text_attachment_document_name">Documento.%1$s</string>
     <plurals name="text_selected">
         <item quantity="one">%d selezionato</item>
         <item quantity="other">%d selezionato</item>
